邏輯基本實現

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
+    "firebase": "^10.11.0",
+    "firebaseui": "^6.1.0",
     "nuxt": "^3.10.3",
+    "nuxt-vuefire": "^1.0.2",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
     "qrcode": "^1.5.3",
@@ -21,6 +24,7 @@
     "vue-router": "^4.3.0",
     "vue3-qr-reader": "^1.0.0",
     "vue3-qrcode-reader": "^0.0.1",
+    "vuefire": "^3.1.23",
     "vuejs-paginate": "^2.1.0"
   },
   "devDependencies": {
