--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "^0.5.1",
     "firebase": "^10.11.0",
     "firebaseui": "^6.1.0",
+    "jsqr": "^1.4.0",
     "nuxt": "^3.10.3",
     "nuxt-vuefire": "^1.0.2",
     "pinia": "^2.1.7",
