--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,8 @@ main = "./.output/server/index.mjs"
 workers_dev = true
 compatibility_date = "2024-05-01"
 
+[placement]
+mode = "smart"
+
 [site]
 bucket = "./.output/public"
-
