--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@nuxt/image": "^1.7.0",
     "@pinia/nuxt": "^0.5.1",
+    "compression-webpack-plugin": "^11.1.0",
     "firebase": "^10.11.1",
     "firebaseui": "^6.1.0",
     "jsqr": "^1.4.0",
     "k6": "^0.0.0",
     "nuxt": "^3.10.3",
+    "nuxt-precompress": "^0.5.9",
     "nuxt-vuefire": "^1.0.2",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
